fix: Changed css so that map is visible on smaller displays

--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,8 @@
 #map {
 	bottom: 0px;
 	height: 90%;
-	left: 362px;
+	width: 55%;
+	
 	position: absolute;
 	right: 0px;
 }
@@ -11,13 +12,9 @@
 }
 .options-box {
 	background: #fff;
-	border: 1px solid #999;
-	border-radius: 3px;
-	height: 100%;
-	line-height: 35px;
-	padding: 10px 10px 30px 10px;
+	
 	text-align: left;
-	width: 340px;
+	width: 45%;
 }
 /* Optional: Makes the sample page fill the window. */
 html, body {
